derive/test/compile_fail/invalid_attr_container.stderr
error: proc-macro derive panicked
 --> compile_fail/invalid_attr_container.rs:4:10
  |
4 | #[derive(Value)]
  |          ^^^^^
  |
  = help: message: unsupported attribute `not_an_attr` on struct
